<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/nav_header_background_color"
        android:layout_width="0dp"
        android:layout_height="144dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/solid_rusd_main_color"
        android:contentDescription="@string/rusd_is_name"/>

    <ImageView
        android:id="@+id/nav_header_rusd_logo"
        android:layout_width="80dp"
        android:layout_height="46dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/rusd_logo"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/rusd_is_textview"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/rusd_logo"/>

    <TextView
        android:id="@+id/rusd_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:maxLines="2"
        android:text="@string/rusd_name"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/nav_header_rusd_logo"
        tools:text="@string/rusd_name"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/rusd_is_textview"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/rusd_is_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/rusd_is_name"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/rusd_is_info_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/rusd_is_name"/>

    <TextView
        android:id="@+id/rusd_is_info_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/rusd_is_info"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/nav_header_background_color"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/rusd_is_info"/>
</android.support.constraint.ConstraintLayout>