<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="edu.uwp.appfactory.rusd.ui.settings.SettingsActivity">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/turn_off_notifications_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/notification_enabled"
                android:layout_marginBottom="32dp"
                android:paddingTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notifications_text_view"
                app:layout_constraintHorizontal_bias="0.0">

                <ImageView
                    android:id="@+id/show_notification"
                    android:layout_width="36dp"
                    android:layout_height="41dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/ic_notification_enabled"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/show_notifications"/>

                <TextView
                    android:id="@+id/show_notification_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/show_notifications"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.414"
                    android:layout_marginBottom="8dp"/>

            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/notifications_text_view"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:paddingBottom="8dp"
                android:text="@string/sectionNotifications"
                android:textColor="@color/colorAccent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/subscriptions_recycler_view"/>

            <TextView
                android:id="@+id/subscriptions_help_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/subscriptions_help"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/subscriptions_text_view"/>

            <TextView
                android:id="@+id/subscriptions_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/subscriptions"
                android:textColor="@color/colorAccent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="64dp"
                android:autoLink="web"
                android:textAlignment="center"
                android:textSize="18sp"
                android:text="@string/privacy_policy"
                android:textColor="@color/colorAccent"
                android:onClick="privacyPolicyClicked"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/turn_off_notifications_layout"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/subscriptions_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                app:layout_constraintHeight_default="wrap"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/subscriptions_help_text_view"/>
        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</layout>

